--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Title: Resisting neighbor label attack in a dynamic network
 Version: 0.1.0
 Author: Jiaqi Tang
 Maintainer: Jiaqi Tang <1107967177@qq.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: An anonymization algorithm to resist neighbor label attack in a dynamic network.
 Depends: R (>= 2.10)
 License: MIT + file LICENSE
 LazyData: true
