--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dynetNLAResistance
 Type: Package
-Title: Resisting neighbor label attack in a dynamic network
+Title: Resisting Neighbor Label Attack in a Dynamic Network
 Version: 0.1.0
 Author: Jiaqi Tang
 Maintainer: Jiaqi Tang <1107967177@qq.com>
